end day 3, testrunner solution candidate

--- a/ConsoleCoreApp1/UnitTestRunner.csproj
+++ b/ConsoleCoreApp1/UnitTestRunner.csproj
@@ -6,6 +6,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Runner.Solution.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\ClassLibrary1\ClassLibrary1.csproj" />
   </ItemGroup>
 
